--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,16 @@
-html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
+@-ms-viewport{width: device-width; }
 /*
 ================================================================================
 PRIMARY STYLES
 ================================================================================*/
-@-ms-viewport{width: device-width; }
+* {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 body {
     padding: 0;
     margin: 0;
-    background-color: #d3cffa;
+    background-color: #9ae69c;
 }
 
 .content{
@@ -18,7 +21,7 @@ body {
 
 .name{
     display: block;
-    background-color: rgb(8, 94, 53);
+    background-color:#3e8241;
     margin: 0px;
     padding: 15px;
     border: 400%;
@@ -28,7 +31,7 @@ body {
 
 .aboutMe-container{
     display: block;
-    background-color: rgb(75, 8, 75);
+    background-color: #6948a3;
     border-radius: 25px;
     padding: 10px;
     margin: 2%;
@@ -37,7 +40,7 @@ body {
 }
 
 .aboutMe-content{
-    background-color: #f6f5ff;
+    background-color: #ba98f5;
     border-radius: 20px; 
     padding: 5px;
     margin: 0;
@@ -49,12 +52,17 @@ body {
 .projects-container{
     display: flex;
     flex-direction: column;
-    background-color: #fdfdff;
+    background-color: #6948a3;
     border-radius: 20px;
     margin: 2%;
-    padding: 10px;
+    padding: 5px;
     width: 50%;
+    color: white;
    /* max-width: 50%;*/
+}
+
+.projects-title {
+    padding-left: 10px;
 }
 
 .projects-content{
@@ -62,13 +70,18 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex-grow: 1;
+    color: black;
+    background-color: #ba98f5;
+    border-radius: 20px;
+    margin: 2%;
     padding: 5px;
     /*max-width: fit-content;*/
 }
 
 .more-container{
     display: block;
-    background-color: rgb(8, 94, 53);
+    background-color: #3e8241;
     margin: 0px;
     padding-top: 10px;
     padding-left: 20px;
