--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ PRIMARY STYLES
 * {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: white;
-   border: solid 1px grey; */
+   border: solid 1px rgba(0, 0, 0, 0);
 }
 
 
@@ -37,7 +37,7 @@ body {
 .headshot{
     border: outset 10px;
     border-image: linear-gradient(#f0eeea, #8e8f8e) 30;
-    border-radius:50%;
+    border-radius:100px;
     width: 14vw;
 }
 
