--- a/styles.css
+++ b/styles.css
@@ -5,18 +5,20 @@ PRIMARY STYLES
 ================================================================================*/
 * {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    border: solid 1px rgba(0, 0, 0, 0);
+   /* border: solid 1px rgba(0, 0, 0, 0); */
 }
 
 
 body {
-    background: url(images/wall.png);
+    background-image: linear-gradient(to right, rgb(27, 46, 27), rgb(39, 65, 39), rgb(27, 46, 27));
+   /* background: url(images/wall.png); */
     min-height: 100vh;
     position: relative;
 }
 
 .row, .col {
     margin: 1%;
+    border-color: grey;
 }
 
 .name {
@@ -48,9 +50,10 @@ Framed picture wall collage effect
 .classyImage-frame{
     width: fit-content;
     height: fit-content;
-    background: linear-gradient(#f0eeea, #8e8f8e);
-    padding: 15px;
-    box-shadow: #001a08c9 0px 10px 36px 0px, #06290f7a 0px 0px 0px 15px;
+    background: linear-gradient(to bottom left, #f0eeea, #8e8f8e);
+    padding: 9px;
+    box-shadow: #001a08c9 0px 10px 36px 0px, #06290f7a 10px 20px 20px 15px;
+    margin-top: 4vh;
 }
 
 .classyImage {
@@ -60,23 +63,25 @@ Framed picture wall collage effect
 .headshot-frame {
     width: fit-content;
     height: fit-content;
-    background: linear-gradient(#f0eeea, #8e8f8e);
-    padding: 10px;
-    box-shadow: #001a08c9 0px 10px 36px 0px, #06290f7a 0px 0px 0px 15px;
+    background: linear-gradient(to bottom left, #f0eeea, #8e8f8e);
+    padding: 8px;
+    box-shadow: #001a08c9 0px 10px 36px 0px, #06290f7a 10px 20px 20px 15px;
     border-radius: 50%;
+    margin-top: 4vh;
 }
 
 .headshot{ 
     border-radius: 50%;
-    width: 14vw;
+    width: 13vw;
 }
 
 .aboutMe-frame {
     width: fit-content;
     height: fit-content;
-    background: linear-gradient(#f0eeea, #8e8f8e);
-    padding: 20px;
-    box-shadow: #001a08c9 0px 10px 36px 0px, #06290f7a 0px 0px 0px 15px;
+    background: linear-gradient(to bottom left, #f0eeea, #8e8f8e);
+    padding: 12px;
+    box-shadow: #001a08c9 0px 10px 36px 0px, #06290f7a 10px 20px 20px 15px;
+    margin-top: 4vh;
 }
 
 .aboutMe {
@@ -85,10 +90,11 @@ Framed picture wall collage effect
 
 .skillList-container {
     background-color: white;
-    border: outset 10px;
-    border-image: linear-gradient(#f0eeea, #8e8f8e) 30;
+    border: outset 8px;
+    border-image: linear-gradient(to bottom left, #f0eeea, #8e8f8e) 30;
     width: fit-content;
-    box-shadow: #001a08c9 0px 10px 36px 0px, #06290f7a 0px 0px 0px 15px;
+    box-shadow: #001a08c9 0px 10px 36px 0px, #06290f7a 10px 20px 20px 15px;
+    margin-top: 4vh;
 }
 
 .skillList {
@@ -103,18 +109,20 @@ Framed picture wall collage effect
 .thumbnail1-frame {
     width: fit-content;
     height: fit-content;
-    background: linear-gradient(#f0eeea, #8e8f8e);
-    padding: 10px;
-    box-shadow: #001a08c9 0px 10px 36px 0px, #06290f7a 0px 0px 0px 15px;
+    background: linear-gradient(to bottom right, #f0eeea, #8e8f8e);
+    padding: 7px;
+    box-shadow: #001a08c9 0px 10px 36px 0px, #06290f7a 10px 20px 20px 15px;
     border-radius: 50%;
+    margin-top: 4vh;
 }
 
 .thumbnail2-frame {
     width: fit-content;
     height: fit-content;
-    background: linear-gradient(#f0eeea, #8e8f8e);
-    padding: 10px;
-    box-shadow: #001a08c9 0px 10px 36px 0px, #06290f7a 0px 0px 0px 15px;
+    background: linear-gradient(to bottom right, #f0eeea, #8e8f8e);
+    padding: 7px;
+    box-shadow: #001a08c9 0px 10px 36px 0px, #06290f7a 10px 20px 20px 15px;
+    margin-top: 4vh;
 }
 
 .thumbnail2 {
@@ -125,3 +133,21 @@ Framed picture wall collage effect
 Thumbnail Image Hover effects 
 =====================================*/
 
+.thumbnail1-frame .thumbnail1{
+    transform-origin: center;
+    transition: transform 0.4s ease-in-out;
+}
+
+.thumbnail1:hover {
+    color: #28666e;
+    box-shadow: #00000029 0px 10px 36px 0px, #0000000f 0px 0px 0px 1px;
+}
+
+.thumnail-frame .thumbnail1:hover {
+    transform: scale(1.1);
+}
+
+.linkName {
+    color: white;
+    position: absolute;
+}
