--- a/styles.css
+++ b/styles.css
@@ -4,21 +4,27 @@
 PRIMARY STYLES
 ================================================================================*/
 * {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-   /* border: solid 1px rgba(0, 0, 0, 0); */
+    font-family: Verdana, Geneva, Tahoma, sans-serif;   
 }
 
+/* ====== test ======== 
+.col, .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8{
+   border: solid 1px rgb(119, 118, 118); 
+}
+
+.row, .row-1, .row-2, .row-3, .row-4, .row-5, .row-6, .row-7, .row-8{
+    border: solid 1px rgb(224, 89, 112)
+} */
+
+.row, .col {
+    margin: 1%;
+} 
 
 body {
     background-image: linear-gradient(to right, rgb(27, 46, 27), rgb(39, 65, 39), rgb(27, 46, 27));
    /* background: url(images/wall.png); */
     min-height: 100vh;
     position: relative;
-}
-
-.row, .col {
-    margin: 1%;
-    border-color: grey;
 }
 
 .name {
@@ -81,15 +87,22 @@ Framed picture wall collage effect
     background: linear-gradient(to bottom left, #f0eeea, #8e8f8e);
     padding: 12px;
     box-shadow: #001a08c9 0px 10px 36px 0px, #06290f7a 10px 20px 20px 15px;
-    margin-top: 4vh;
+    margin-top: 2vh;
 }
 
 .aboutMe {
     width: 25vw;
+    height: 60vh;
+    padding: 5px;
+    background-color: antiquewhite;
+}
+
+.aboutT {
+    font-size: 2vmin;
 }
 
 .skillList-container {
-    background-color: white;
+    background-color: antiquewhite;
     border: outset 8px;
     border-image: linear-gradient(to bottom left, #f0eeea, #8e8f8e) 30;
     width: fit-content;
@@ -99,6 +112,7 @@ Framed picture wall collage effect
 
 .skillList {
     color: black;
+    font-size: 3vh;
 }
 
 .thumbnail1 {
